@@ -420,9 +420,12 @@ if HAVE_DARWIN
 libvlccore_la_SOURCES += \
 	darwin/dirs.c \
 	darwin/error.c \
-	darwin/netconf.c \
 	darwin/specific.c \
 	darwin/thread.c
+
+libvlccore_objc_la_SOURCES = \
+	darwin/netconf.m
+noinst_LTLIBRARIES = libvlccore_objc.la
 else
 libvlccore_la_SOURCES += \
 	posix/dirs.c \
@@ -486,7 +489,11 @@ if HAVE_DBUS
 libvlccore_la_LIBADD += $(DBUS_LIBS)
 endif
 if HAVE_DARWIN
-libvlccore_la_LDFLAGS += -Xlinker -install_name -Xlinker @rpath/libvlccore.dylib
+$(libvlccore_la_OBJECTS): libvlccore_objc.la
+libvlccore_objc_la_OBJCFLAGS = $(AM_OBJCFLAGS) -fobjc-arc
+libvlccore_objc_la_LDFLAGS = -static
+libvlccore_la_LIBADD += libvlccore_objc.la
+libvlccore_la_LDFLAGS +=  -Wl,-framework,Foundation -Xlinker -install_name -Xlinker @rpath/libvlccore.dylib
 endif
 
 libvlc_win32_rc.$(OBJEXT): libvlc_win32_rc.rc $(top_srcdir)/extras/package/win32/libvlc.dll.manifest
